crates/dora-ir/src/tests/snapshots/dora_ir__tests__wasm__xor_i64.snap
---
source: crates/dora-ir/src/tests/wasm.rs
expression: "test_module(& context, i64_type, block).as_operation()"
snapshot_kind: text
---
"builtin.module"() ({
  "func.func"() <{function_type = (i64) -> (), sym_name = "test_func"}> ({
  ^bb0(%arg0: i64, %arg1: i64):
    %0 = "wasm.xor"(%arg0, %arg1) : (i64, i64) -> i64
  }) : () -> ()
}) : () -> ()
